--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:scss": "node-sass --output-style nested -o css scss/styles.scss",
     "dev:watch": "onchange 'scss' -- npm run dev:scss",
-    "dev:serve": "browser-sync start --server --ss 'views' --files 'scss/**/*.scss, views/*.html, js/*.js'",
+    "dev:serve": "browser-sync start --no-notify --server --ss 'views' --files 'scss/**/*.scss, views/*.html, js/*.js'",
     "server": "run-p dev:watch dev:serve",
     "build:dist": "mkdir -p dist/{css,js,img,fonts}",
     "build:html": "html-minifier --input-dir ./views --output-dir ./dist --collapse-whitespace",
@@ -20,7 +20,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.26.7"
+    "bootstrap-4-grid": "^3.4.0",
+    "browser-sync": "^2.26.14",
+    "clarifai-nodejs-grpc": "^7.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.6",
