--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "dev:watch": "onchange 'scss' -- npm run dev:scss",
     "dev:serve": "browser-sync start --no-notify --server --ss 'views' --files 'scss/**/*.scss, views/*.html, js/*.js'",
     "server": "run-p dev:watch dev:serve ",
-    "build:docs": "mkdir -p docs/{css,js,img,fonts}",
-    "build:html": "html-minifier --input-dir ./views --output-dir ./docs --collapse-whitespace",
-    "build:css": "postcss -u autoprefixer -o docs/css/styles.css css/*.css",
-    "build:js": "cp js/* docs/js",
-    "build:fonts": "cp fonts/* docs/fonts",
-    "build:img": "cp img/* docs/img",
+    "build:dist": "mkdir -p dist/{css,js,img,fonts}",
+    "build:html": "html-minifier --input-dir ./views --output-dir ./dist --collapse-whitespace",
+    "build:css": "postcss -u autoprefixer -o dist/css/styles.css css/*.css",
+    "build:js": "cp js/* dist/js",
+    "build:fonts": "cp fonts/* dist/fonts",
+    "build:img": "cp img/* dist/img",
     "build": "run-s build:*"
   },
   "keywords": [],
